Small compactions